--- a/package.json
+++ b/package.json
@@ -16,12 +16,19 @@
     "url": "https://github.com/imprevo/email-templates/issues"
   },
   "homepage": "https://github.com/imprevo/email-templates#readme",
+  "dependencies": {},
   "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^5.0.0",
+    "@typescript-eslint/parser": "^5.0.0",
+    "eslint": "^8.0.1",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-react": "^7.26.1",
     "husky": "^7.0.2",
     "lint-staged": "^11.2.3",
-    "prettier": "^2.4.1"
+    "prettier": "^2.4.1",
+    "typescript": "^4.4.4"
   },
   "lint-staged": {
-    "*.{js,ts,json,md}": "prettier --write"
+    "*.{js,ts,tsx,json,md}": "prettier --write"
   }
 }
