--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "start": "nodemon --delay 100ms --watch src src/server/index.ts --exec ts-node",
     "prepare": "husky install"
   },
   "repository": {
@@ -25,7 +26,9 @@
     "eslint-plugin-react": "^7.26.1",
     "husky": "^7.0.2",
     "lint-staged": "^11.2.3",
+    "nodemon": "^2.0.13",
     "prettier": "^2.4.1",
+    "ts-node": "^10.3.0",
     "typescript": "^4.4.4"
   },
   "lint-staged": {
