--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon --delay 100ms --watch src src/server/index.ts --exec ts-node",
+    "start:server": "nodemon --delay 100ms --watch src src/server/index.ts --exec ts-node",
+    "start:client": "webpack serve --mode=development",
     "prepare": "husky install"
   },
   "repository": {
@@ -24,12 +25,17 @@
     "eslint": "^8.0.1",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-react": "^7.26.1",
+    "html-webpack-plugin": "^5.3.2",
     "husky": "^7.0.2",
     "lint-staged": "^11.2.3",
     "nodemon": "^2.0.13",
     "prettier": "^2.4.1",
+    "ts-loader": "^9.2.6",
     "ts-node": "^10.3.0",
-    "typescript": "^4.4.4"
+    "typescript": "^4.4.4",
+    "webpack": "^5.58.2",
+    "webpack-cli": "^4.9.0",
+    "webpack-dev-server": "^4.3.1"
   },
   "lint-staged": {
     "*.{js,ts,tsx,json,md}": "prettier --write"
