--- a/package.json
+++ b/package.json
@@ -18,8 +18,15 @@
     "url": "https://github.com/imprevo/email-templates/issues"
   },
   "homepage": "https://github.com/imprevo/email-templates#readme",
-  "dependencies": {},
+  "dependencies": {
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2"
+  },
   "devDependencies": {
+    "@types/node": "^16.11.0",
+    "@types/react": "^17.0.29",
+    "@types/react-dom": "^17.0.9",
+    "@types/webpack-env": "^1.16.3",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "@typescript-eslint/parser": "^5.0.0",
     "eslint": "^8.0.1",
@@ -38,6 +45,7 @@
     "webpack-dev-server": "^4.3.1"
   },
   "lint-staged": {
-    "*.{js,ts,tsx,json,md}": "prettier --write"
+    "*.{js,ts,tsx,json,md}": "prettier --write",
+    "*.{js,ts,tsx}": "eslint"
   }
 }
