--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "start:server": "nodemon --delay 100ms --watch src src/server/index.ts --exec ts-node",
     "start:client": "webpack serve --mode=development",
+    "test": "jest",
     "prepare": "husky install"
   },
   "repository": {
@@ -26,6 +27,7 @@
     "react-dom": "^17.0.2"
   },
   "devDependencies": {
+    "@types/jest": "^27.0.2",
     "@types/node": "^16.11.0",
     "@types/react": "^17.0.29",
     "@types/react-dom": "^17.0.9",
@@ -37,9 +39,11 @@
     "eslint-plugin-react": "^7.26.1",
     "html-webpack-plugin": "^5.3.2",
     "husky": "^7.0.2",
+    "jest": "^27.3.0",
     "lint-staged": "^11.2.3",
     "nodemon": "^2.0.13",
     "prettier": "^2.4.1",
+    "ts-jest": "^27.0.7",
     "ts-loader": "^9.2.6",
     "ts-node": "^10.3.0",
     "typescript": "^4.4.4",
