--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "start:server": "nodemon --delay 100ms --watch src src/server/index.ts --exec ts-node",
     "start:client": "webpack serve --mode=development",
     "test": "jest",
+    "test:watch": "jest --watch",
     "prepare": "husky install"
   },
   "repository": {
@@ -23,11 +24,15 @@
     "@emotion/react": "^11.4.1",
     "@emotion/styled": "^11.3.0",
     "@mui/material": "^5.0.4",
+    "cssom": "^0.4.4",
+    "jsdom": "^16.7.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
   },
   "devDependencies": {
+    "@types/cssom": "^0.4.1",
     "@types/jest": "^27.0.2",
+    "@types/jsdom": "^16.2.13",
     "@types/node": "^16.11.0",
     "@types/react": "^17.0.29",
     "@types/react-dom": "^17.0.9",
