--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start:server": "nodemon --delay 100ms --watch src src/server/index.ts --exec ts-node",
-    "start:client": "webpack serve --mode=development",
+    "start:playground": "webpack serve --mode=development",
     "test": "jest",
     "test:watch": "jest --watch",
     "prepare": "husky install"
